[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Player/tile_0240.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/tile_0241.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/tile_0242.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/tile_0243.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/tile_0244.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/tile_0242.l.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/tile_0241.l.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/tile_0243.l.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/tile_0244.l.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/tile_0240.s.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/tile_0246.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/tile_0245.png" type="Texture" id=13]
[ext_resource path="res://Assets/mp3/jump.wav" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.41245, 4.8417 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.07168, 5.22989 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "run_l",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 12 ) ],
"loop": true,
"name": "die",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "run_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 11 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "jump.l",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.36212, 5.22957 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 300, 300 )
gravity = 700.0

[node name="tile_0240" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.117647, 0.129412, 0.913725, 1 )
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -146.272 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1024
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="Enemy_Detector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Detector"]
modulate = Color( 0.164706, 0.968627, 0, 1 )
position = Vector2( 0.125, -5.25 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.140306, -7.99754 )
frames = SubResource( 3 )
animation = "die"
speed_scale = 3.0

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
attenuation = 0.353554

[node name="Key_Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key_Detector"]
position = Vector2( 0, -5.25561 )
shape = SubResource( 4 )
[connection signal="area_entered" from="Enemy_Detector" to="." method="_on_Enemy_Detector_area_entered"]
[connection signal="body_entered" from="Enemy_Detector" to="." method="_on_Enemy_Detector_body_entered"]
[connection signal="area_entered" from="Key_Detector" to="." method="_on_Key_Detector_area_entered"]
